force-app/main/default/objects/Account/fields/AB_CS__c.field-meta.xml
<CustomField>
    <fullName>AB_CS__c</fullName>
    <description>Test Deployment via changeset</description>
    <label>AB_CS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>