force-app/main/default/objects/Account/fields/AB_Test__c.field-meta.xml
<CustomField>
    <fullName>AB_Test__c</fullName>
    <label>AB_Test</label>
    <length>20</length>
    <type>Text</type>
</CustomField>