force-app/main/default/objects/Account/fields/ABM_Key_Account_Current__c.field-meta.xml
<CustomField>
    <fullName>ABM_Key_Account_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ABM Key Account Current</label>
    <type>Checkbox</type>
</CustomField>