force-app/main/default/objects/Account/fields/ABM_Key_Account_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>ABM_Key_Account_Current_Date__c</fullName>
    <label>ABM Key Account Current Date</label>
    <type>Date</type>
</CustomField>