force-app/main/default/objects/Account/fields/ABM_Tier__c.field-meta.xml
<CustomField>
    <fullName>ABM_Tier__c</fullName>
    <label>ABM Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>G10</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
                <default>true</default>
                <label>Testing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>