force-app/main/default/objects/Account/fields/accId__c.field-meta.xml
<CustomField>
    <fullName>accId__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>accId</label>
    <type>AutoNumber</type>
</CustomField>