force-app/main/default/objects/Account/fields/Account_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Lost_Date__c</fullName>
    <inlineHelpText>It is the Close Date on the most recent lost opportunity for this account.</inlineHelpText>
    <label>Account Lost Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>