force-app/main/default/objects/Account/fields/Account_Owner_is_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_is_Logged_In_User__c</fullName>
    <description>Field created for Reporting Purpose.</description>
    <formula>If(  OwnerId = $User.Id,&quot;True&quot;,&quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner is Logged In User</label>
    <type>Text</type>
</CustomField>