force-app/main/default/objects/Account/fields/Account_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Type__c</fullName>
    <label>Account Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Integrator (SI)</fullName>
            </value>
            <value>
                <fullName>Reseller (VAR)</fullName>
            </value>
            <value>
                <fullName>Referral Partner (RP)</fullName>
            </value>
            <value>
                <fullName>Alliance Partner (AP)/Technology Partner (TP)</fullName>
            </value>
            <value>
                <fullName>Partner Prospect</fullName>
            </value>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>