force-app/main/default/objects/Account/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <formula>&apos;ARACC&apos;+accId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountID</label>
    <type>Text</type>
</CustomField>