force-app/main/default/objects/Account/fields/Additional_Partners__c.field-meta.xml
<CustomField>
    <fullName>Additional_Partners__c</fullName>
    <formula>HYPERLINK(&quot;https://autorabit.lightning.force.com/lightning/r/&quot; &amp;  Id  &amp; &quot;/related/Additional_Partners__r/view&quot;,&quot;Click here to add/view&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CRM link to add/view additional partners</inlineHelpText>
    <label>Additional Partners</label>
    <type>Text</type>
</CustomField>