force-app/main/default/objects/Account/fields/algnlta__Email_Domains__c.field-meta.xml
<CustomField>
    <fullName>algnlta__Email_Domains__c</fullName>
    <description>Unique email domains of contacts on the account used for lead-to-account matching and lead-to-contact auto-conversion. Updated automatically by Align.ly.</description>
    <inlineHelpText>Unique email domains of contacts on the account used for lead-to-account matching and lead-to-contact auto-conversion. Updated automatically by Align.ly.</inlineHelpText>
    <label>Email Domain(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>