force-app/main/default/objects/Account/fields/algnlta__Geography_Match__c.field-meta.xml
<CustomField>
    <fullName>algnlta__Geography_Match__c</fullName>
    <label>Geography Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact Match on Country</fullName>
            </value>
            <value>
                <fullName>Exact Match on Country and State</fullName>
            </value>
            <value>
                <fullName>Exact match on Country, State, and City</fullName>
            </value>
            <value>
                <fullName>Exact Match on Postal Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>