force-app/main/default/objects/Account/fields/algnlta__Lock_Account__c.field-meta.xml
<CustomField>
    <fullName>algnlta__Lock_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the &quot;Email Domain(s)&quot; field on account will be &quot;locked&quot; and the field will not be updated. If email domains are present in the &quot;Email Domain(s)&quot; field, leads will still match to the account and leads will still auto-convert to the account.</description>
    <inlineHelpText>If checked, the &quot;Email Domain(s)&quot; field on account will be &quot;locked&quot; and the field will not be updated. If email domains are present in the &quot;Email Domain(s)&quot; field, leads will still match to the account and leads will still auto-convert to the account.</inlineHelpText>
    <label>Lock Account</label>
    <type>Checkbox</type>
</CustomField>