force-app/main/default/objects/Account/fields/Am_I_doing_good__c.field-meta.xml
<CustomField>
    <fullName>Am_I_doing_good__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Am I doing good?</label>
    <type>Checkbox</type>
</CustomField>