force-app/main/default/objects/Account/fields/anjalitest1__c.field-meta.xml
<CustomField>
    <fullName>anjalitest1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>anjalitest1</label>
    <type>Checkbox</type>
</CustomField>