force-app/main/default/objects/Account/fields/ARdeploy__c.field-meta.xml
<CustomField>
    <fullName>ARdeploy__c</fullName>
    <label>ARdeploy</label>
    <length>16</length>
    <type>Text</type>
</CustomField>