force-app/main/default/objects/Account/fields/ARR_Amount_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>ARR_Amount_Closed_Won__c</fullName>
    <label>ARR Amount Closed Won</label>
    <summarizedField>Opportunity.ARR_Last_Full_Month_of_Opp__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>