force-app/main/default/objects/Account/fields/ARR_Amount_in_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>ARR_Amount_in_Pipeline__c</fullName>
    <label>ARR Amount in Pipeline</label>
    <summarizedField>Opportunity.ARR_Last_Full_Month_of_Opp__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Qualify, Demo, Evaluate, POC, Propose, Procurement, Review</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>