force-app/main/default/objects/Account/fields/ARR_End_of_Month__c.field-meta.xml
<CustomField>
    <fullName>ARR_End_of_Month__c</fullName>
    <description>ARR for the account on last day of current month. Field requested by Ranjini February 2022 and Meredith in 2021. Updated daily by schedAccountCurrentMetricsDaily.</description>
    <inlineHelpText>ARR for the account on last day of current month</inlineHelpText>
    <label>ARR End of Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>