force-app/main/default/objects/Account/fields/ARR_Record_Migrator_EOM__c.field-meta.xml
<CustomField>
    <fullName>ARR_Record_Migrator_EOM__c</fullName>
    <description>ARR for opportunity line items with accounting bin Record Migrator last day of current month</description>
    <inlineHelpText>ARR for opportunity line items with accounting bin Record Migrator last day of current month</inlineHelpText>
    <label>ARR Record Migrator EOM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>