force-app/main/default/objects/Account/fields/Assignment_Note__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Note__c</fullName>
    <description>Note related to who the account should be assigned to.</description>
    <label>Assignment Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>