force-app/main/default/objects/Account/fields/Auto_Renew_Term_Notice_Period_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Term_Notice_Period_In_Days__c</fullName>
    <description>Number of days notice the MSA says the customer must give if they intend to churn rather than auto-renew. This must be a whole number. Leave it blank if the MSA does not have auto-renew language.</description>
    <inlineHelpText>This must be a whole number. Leave it blank if the MSA does not have auto-renew language.</inlineHelpText>
    <label>Auto-Renew Term Notice Period In Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>