force-app/main/default/objects/Account/fields/AutoRABIT_Instance_Link__c.field-meta.xml
<CustomField>
    <fullName>AutoRABIT_Instance_Link__c</fullName>
    <label>AutoRABIT Instance Link</label>
    <type>Url</type>
</CustomField>