force-app/main/default/objects/Account/fields/AutoRABIT_Release__c.field-meta.xml
<CustomField>
    <fullName>AutoRABIT_Release__c</fullName>
    <label>AutoRABIT Release</label>
    <length>10</length>
    <type>Text</type>
</CustomField>