force-app/main/default/objects/Account/fields/BB_Field__c.field-meta.xml
<CustomField>
    <fullName>BB_Field__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>BB Field</label>
    <type>AutoNumber</type>
</CustomField>