force-app/main/default/objects/Account/fields/Books__c.field-meta.xml
<CustomField>
    <fullName>Books__c</fullName>
    <label>Books</label>
    <length>20</length>
    <type>Text</type>
</CustomField>