force-app/main/default/objects/Account/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business_Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AutoRABIT</fullName>
            </value>
            <value>
                <fullName>BPM Services</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Migile</fullName>
            </value>
            <value>
                <fullName>Social Champ</fullName>
            </value>
            <value>
                <fullName>Emerging Technologies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>