force-app/main/default/objects/Account/fields/CheckMeAccount__c.field-meta.xml
<CustomField>
    <fullName>CheckMeAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckMeAccount</label>
    <type>Checkbox</type>
</CustomField>