force-app/main/default/objects/Account/fields/Churn_ARR__c.field-meta.xml
<CustomField>
    <fullName>Churn_ARR__c</fullName>
    <description>ARR account had in last full month of a subscription before churning. Currently, this field needs to be populated manually after churn.</description>
    <inlineHelpText>ARR account had in last full month of a subscription before churning. Currently, this field needs to be populated manually after churn.</inlineHelpText>
    <label>Churn ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>