force-app/main/default/objects/Account/fields/Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Date__c</fullName>
    <description>Max Won Subscription End Date +1, which is the day after the last won subscription ended.</description>
    <inlineHelpText>Max Won Subscription End Date +1, which is the day after the last won subscription ended.</inlineHelpText>
    <label>Churn Date</label>
    <type>Date</type>
</CustomField>