force-app/main/default/objects/Account/fields/Churn_Intent_Communication_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Intent_Communication_Date__c</fullName>
    <description>The date a customer notified us of intent to churn.</description>
    <inlineHelpText>The date a customer notified us of intent to churn.</inlineHelpText>
    <label>Churn Intent Communication Date</label>
    <type>Date</type>
</CustomField>