force-app/main/default/objects/Account/fields/CodeScan_Cloud_Organization__c.field-meta.xml
<CustomField>
    <fullName>CodeScan_Cloud_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CodeScan Cloud Organization</label>
    <referenceTo>CodeScan_Organization__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account_Cloud_License</relationshipName>
    <type>Lookup</type>
</CustomField>