force-app/main/default/objects/Account/fields/CodeScan_LOC_Overage_Allowed_Reason__c.field-meta.xml
<CustomField>
    <fullName>CodeScan_LOC_Overage_Allowed_Reason__c</fullName>
    <description>CodeScan usually limits the LOC usage to 40,000 times the number of blocks purchased, but sometimes a special product sold or use of another product causes us to allow more. If this field is populated, an overage is allowed for the reason listed.</description>
    <inlineHelpText>CodeScan usually limits the LOC usage to 40,000 times the number of blocks purchased, but sometimes a special product sold or use of another product causes us to allow more. If this field is populated, an overage is allowed for the reason listed.</inlineHelpText>
    <label>CodeScan LOC Overage Allowed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>