force-app/main/default/objects/Account/fields/Codescantest__c.field-meta.xml
<CustomField>
    <fullName>Codescantest__c</fullName>
    <label>Codescantest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>