force-app/main/default/objects/Account/fields/Cohort_Month__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Month__c</fullName>
    <formula>If(ISBLANK(Cohort_Date__c),
null,
If(Min_Won_Subscription_Start_Date__c &lt; Cohort_Date__c,
DATE(YEAR(Min_Won_Subscription_Start_Date__c),MONTH(Min_Won_Subscription_Start_Date__c),1),
DATE(YEAR(Cohort_Date__c),MONTH(Cohort_Date__c),1)
)
)</formula>
    <label>Cohort Month</label>
    <type>Date</type>
</CustomField>