force-app/main/default/objects/Account/fields/Company_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_LinkedIn_URL__c</fullName>
    <description>URL to LinkedIn Profile for Account</description>
    <label>Company LinkedIn URL</label>
    <type>Url</type>
</CustomField>