force-app/main/default/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Field used in Pardot Forms/Pardot Form Handlers.</description>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company_Size</valueSetName>
    </valueSet>
</CustomField>