force-app/main/default/objects/Account/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copado</fullName>
            </value>
            <value>
                <fullName>Flosum</fullName>
            </value>
            <value>
                <fullName>Jitterbit</fullName>
            </value>
            <value>
                <fullName>Odaseva</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>AssureClick</fullName>
            </value>
            <value>
                <fullName>Provar</fullName>
            </value>
            <value>
                <fullName>Dream factory – Snapshot</fullName>
            </value>
            <value>
                <fullName>Dream factory – Cascade &amp; others</fullName>
            </value>
            <value>
                <fullName>Atlassian - Bamboo</fullName>
            </value>
            <value>
                <fullName>Atlassian - Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>