force-app/main/default/objects/Account/fields/Contract_End_Date_from_SD__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_from_SD__c</fullName>
    <inlineHelpText>Contract End Date from SD</inlineHelpText>
    <label>Contract End Date(from SD)</label>
    <type>Date</type>
</CustomField>