force-app/main/default/objects/Account/fields/CSM_Notes__c.field-meta.xml
<CustomField>
    <fullName>CSM_Notes__c</fullName>
    <inlineHelpText>CSM Notes when the Customer Health Status is &apos;Red&apos; or Yellow&apos;.
Meeting Minutes.
CSM Pulse.</inlineHelpText>
    <label>CSM Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>