force-app/main/default/objects/Account/fields/Customer_group__c.field-meta.xml
<CustomField>
    <fullName>Customer_group__c</fullName>
    <formula>MID ( Primary_Email__c ,
FIND( &quot;@&quot;, Primary_Email__c ) + 1 ,
FIND ( &quot;.&quot;, Primary_Email__c , FIND( &quot;@&quot;, Primary_Email__c ) ) - 1 - FIND( &quot;@&quot;, Primary_Email__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer group</label>
    <type>Text</type>
</CustomField>