force-app/main/default/objects/Account/fields/Customer_Release_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Customer_Release_Cadence__c</fullName>
    <label>Customer Release Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>