force-app/main/default/objects/Account/fields/Customer_Success_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Tier__c</fullName>
    <label>Customer Success Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>Not Named</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>