force-app/main/default/objects/Account/fields/Date_Acct_Updated_to_Not_ABM__c.field-meta.xml
<CustomField>
    <fullName>Date_Acct_Updated_to_Not_ABM__c</fullName>
    <label>Date Acct Updated to Not ABM</label>
    <type>Date</type>
</CustomField>