force-app/main/default/objects/Account/fields/DemoQnA__c.field-meta.xml
<CustomField>
    <fullName>DemoQnA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoQnA</label>
    <type>Checkbox</type>
</CustomField>