force-app/main/default/objects/Account/fields/Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please mark this TRUE on the duplicate account.</inlineHelpText>
    <label>Duplicate Account</label>
    <type>Checkbox</type>
</CustomField>