force-app/main/default/objects/Account/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Shows when Subscription is expiring.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>