force-app/main/default/objects/Account/fields/ES_Team__c.field-meta.xml
<CustomField>
    <fullName>ES_Team__c</fullName>
    <label>ES Team</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>