force-app/main/default/objects/Account/fields/Executive_Business_Review_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Executive_Business_Review_Event_Id__c</fullName>
    <label>Executive Business Review Event Id</label>
    <type>Url</type>
</CustomField>