force-app/main/default/objects/Account/fields/Executive_Business_Review_Link__c.field-meta.xml
<CustomField>
    <fullName>Executive_Business_Review_Link__c</fullName>
    <formula>if(Executive_Business_Review_Event_Id__c &lt;&gt;&quot;&quot;,HYPERLINK(&quot;https://autorabit.lightning.force.com/lightning/r/Event/&quot; &amp;  Executive_Business_Review_Event_Id__c &amp;&quot;/view&quot;,  &quot;Business Review&quot;,&quot;_self&quot;),&quot;&quot;)</formula>
    <label>Executive Business Review Link</label>
    <type>Text</type>
</CustomField>