force-app/main/default/objects/Account/fields/G2_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>G2_Last_Activity_Date__c</fullName>
    <description>G2 Last Activity Date for this account</description>
    <label>G2 Last Activity Date</label>
    <type>DateTime</type>
</CustomField>