force-app/main/default/objects/Account/fields/G2_Title_by_Product__c.field-meta.xml
<CustomField>
    <fullName>G2_Title_by_Product__c</fullName>
    <inlineHelpText>G2 Title by Product from G2 Event.</inlineHelpText>
    <label>G2 Title by Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>