force-app/main/default/objects/Account/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <description>Geographic region classified as &apos;EMEA&apos;, &apos;APAC&apos;, North America&apos;, and &apos;South America&apos; based on the Account Billing Country.</description>
    <formula>IF(CONTAINS(&quot;unclear::unknown::None&quot;, BillingCountry), &quot;Not Defined&quot;,
IF(CONTAINS(&quot;Australia::Hong Kong::Malaysia::New Zealand::Singapore::China::Philippines::India::Nepal::Indonesia::Japan::Cambodia::Pakistan::Bangladesh::Thailand::Viet Nam::Korea::Maldives::Sri Lanka::Afganistan::Russia&quot; , BillingCountry ),&quot;APAC&quot;,
IF(CONTAINS(&quot;Antigua and Barbuda::Barbados::Belize::Canada::Costa Rica::Cuba::Dominica::,Dominican Republic::El Salvador::Grenada::Guatemala::Haiti::Honduras::Jamaica::Mexico::Nicaragua::Panama::Saint Kitts and Nevis::Saint Lucia::Saint Vincent and the Grenadines::The Bahamas::Trinidad and Tobago::United States&quot;, BillingCountry), &quot;North America&quot;,
IF(CONTAINS(&quot;Argentina::Bolivia::Brazil::Chile::Colombia::Ecuador::Falkland Islands::French Guiana::Guyana::Coat of arms of Paraguay.svg::Peru::South Georgia and the South Sandwich Islands::Suriname::Uruguay::Venezuela&quot;, BillingCountry ), &quot;South America&quot;,
&quot;EMEA&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Geographic region based on the Account Billing Country.</inlineHelpText>
    <label>Geography</label>
    <type>Text</type>
</CustomField>